--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
     <label><input type="checkbox" name="mp4" checked>mp4</label>
     <label><input type="checkbox" name="mjpeg" checked>mjpeg</label>
 </div>
-<table id="streams">
+<table>
     <thead>
     <tr>
         <th><input id="selectall" type="checkbox">Name</th>
@@ -78,7 +78,7 @@
         <th>Commands</th>
     </tr>
     </thead>
-    <tbody>
+    <tbody id="streams">
     </tbody>
 </table>
 <script>
