--- a/www/links.html
+++ b/www/links.html
@@ -1,66 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>go2rtc - links</title>
-    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
+	<head>
+		<title>go2rtc - links</title>
+		<meta
+			name="viewport"
+			content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1"
+		/>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<style>
+			body {
+				font-family: Arial, Helvetica, sans-serif;
+			}
 
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-        }
+			body {
+				margin: 0;
+				padding: 0;
+				display: flex;
+				flex-direction: column;
+			}
 
-        html, body {
-            width: 100%;
-            height: 100%;
-        }
+			html,
+			body {
+				width: 100%;
+				height: 100%;
+			}
 
-        div {
-            padding: 10px;
-        }
+			div {
+				padding: 10px;
+			}
 
-        div > li {
-            list-style-type: none;
-            padding-left: 10px;
-            position: relative;
-        }
+			div > li {
+				list-style-type: none;
+				padding-left: 10px;
+				position: relative;
+			}
 
-        div > li:before {
-            content: "-";
-            position: absolute;
-            left: 0;
-        }
-    </style>
-</head>
-<body>
-<script src="main.js"></script>
-<div id="links"></div>
-<script>
-    const src = new URLSearchParams(location.search).get('src')
+			div > li:before {
+				content: "-";
+				position: absolute;
+				left: 0;
+			}
+		</style>
+	</head>
+	<body>
+		<script src="main.js"></script>
+		<div id="links"></div>
+		<script>
+			const src = new URLSearchParams(location.search).get("src");
 
-    document.getElementById('links').innerHTML = `
+			document.getElementById("links").innerHTML = `
         <h2>Any codec in source</h2>
         <li><a href="stream.html?src=${src}">stream.html</a> with auto-select mode / browsers: all / codecs: H264, H265*, MJPEG, JPEG, AAC, PCMU, PCMA, OPUS</li>
         <li><a href="api/streams?src=${src}">info.json</a> page with active connections</li>
-    `
+    `;
 
-    const url = new URL('api', location.href)
-    fetch(url, {cache: 'no-cache'}).then(r => r.json()).then(data => {
-        let rtsp = location.host + ':8554'
-        try {
-            const host = data.host.match(/^[^:]+/)[0]
-            const port = data.rtsp.listen.match(/[0-9]+$/)[0]
-            rtsp = `${host}:${port}`
-        } catch (e) {
-        }
+			const url = new URL("api", location.href);
+			fetch(url, { cache: "no-cache" })
+				.then((r) => r.json())
+				.then((data) => {
+					let rtsp = location.host + ":8554";
+					try {
+						const host = data.host.match(/^[^:]+/)[0];
+						const port = data.rtsp.listen.match(/[0-9]+$/)[0];
+						rtsp = `${host}:${port}`;
+					} catch (e) {}
 
-        document.getElementById('links').innerHTML += `
+					document.getElementById("links").innerHTML += `
             <li><a href="rtsp://${rtsp}/${src}">rtsp</a> with only one video and one audio / codecs: any</li>
             <li><a href="rtsp://${rtsp}/${src}?mp4">rtsp</a> for MP4 recording (Hass or Frigate) / codecs: H264, H265, AAC</li>
             <li><a href="rtsp://${rtsp}/${src}?video=all&audio=all">rtsp</a> with all tracks / codecs: any</li>
@@ -72,6 +77,7 @@
             <li><a href="api/stream.mp4?src=${src}&mp4=flac">stream.mp4</a> modern MP4 stream with common audio / browsers: Chrome, Firefox / codecs: H264, H265*, AAC, FLAC (PCMA, PCMU, PCM)</li>
             <li><a href="api/stream.mp4?src=${src}&mp4=all">stream.mp4</a> MP4 stream with any audio / browsers: Chrome / codecs: H264, H265*, AAC, OPUS, MP3, FLAC (PCMA, PCMU, PCM)</li>
             <li><a href="api/frame.mp4?src=${src}">frame.mp4</a> snapshot in MP4-format / browsers: all / codecs: H264, H265*</li>
+            <li><a href="api/frame.jpg?src=${src}">frame.jpg</a> snapshot in JPG-format / browsers: all / codecs: H264, H265*</li>
             <li><a href="api/stream.m3u8?src=${src}">stream.m3u8</a> legacy HLS/TS / browsers: Safari all, Chrome Android / codecs: H264</li>
             <li><a href="api/stream.m3u8?src=${src}&mp4">stream.m3u8</a> legacy HLS/fMP4 / browsers: Safari all, Chrome Android / codecs: H264, H265*, AAC</li>
             <li><a href="api/stream.m3u8?src=${src}&mp4=flac">stream.m3u8</a> modern HLS/fMP4 / browsers: Safari all, Chrome Android / codecs: H264, H265*, AAC, FLAC (PCMA, PCMU, PCM)</li>
@@ -80,102 +86,153 @@
             <li><a href="stream.html?src=${src}&mode=mjpeg">stream.html</a> with MJPEG mode / browsers: all / codecs: MJPEG, JPEG</li>
             <li><a href="api/stream.mjpeg?src=${src}">stream.mjpeg</a> MJPEG stream / browsers: all / codecs: MJPEG, JPEG</li>
             <li><a href="api/frame.jpeg?src=${src}">frame.jpeg</a> snapshot in JPEG-format / browsers: all / codecs: MJPEG, JPEG</li>
-        `
-    })
-</script>
+        `;
+				});
+		</script>
 
-<div>
-    <h2>Play audio</h2>
-    <pre>example: ffmpeg:https://example.com/song.mp3#audio=pcma#input=file</pre>
-    <input id="source" type="text" placeholder="source">
-    <a id="send" href="#">send</a> / cameras with two way audio support
-</div>
-<script>
-    document.getElementById('send').addEventListener('click', ev => {
-        ev.preventDefault()
-        const url = new URL('api/streams', location.href)
-        url.searchParams.set('dst', src)
-        url.searchParams.set('src', document.getElementById('source').value)
-        fetch(url, {method: 'POST'})
-    })
-</script>
+		<div>
+			<h2>Play audio</h2>
+			<pre>
+example: ffmpeg:https://example.com/song.mp3#audio=pcma#input=file</pre
+			>
+			<input id="source" type="text" placeholder="source" />
+			<a id="send" href="#">send</a> / cameras with two way audio support
+		</div>
+		<script>
+			document.getElementById("send").addEventListener("click", (ev) => {
+				ev.preventDefault();
+				const url = new URL("api/streams", location.href);
+				url.searchParams.set("dst", src);
+				url.searchParams.set(
+					"src",
+					document.getElementById("source").value
+				);
+				fetch(url, { method: "POST" });
+			});
+		</script>
 
-<div id="webrtc">
-    <h2>WebRTC Magic</h2>
-    <label><input type="radio" name="webrtc" value="video+audio" checked>video+audio = simple viewer</label><br>
-    <label><input type="radio" name="webrtc" value="video+audio+microphone">video+audio+microphone = two way audio from camera</label><br>
-    <label><input type="radio" name="webrtc" value="camera+microphone">camera+microphone = stream from browser</label><br>
-    <label><input type="radio" name="webrtc" value="display+speaker">display+speaker = broadcast software</label><br>
+		<div id="webrtc">
+			<h2>WebRTC Magic</h2>
+			<label
+				><input
+					type="radio"
+					name="webrtc"
+					value="video+audio"
+					checked
+				/>video+audio = simple viewer</label
+			><br />
+			<label
+				><input
+					type="radio"
+					name="webrtc"
+					value="video+audio+microphone"
+				/>video+audio+microphone = two way audio from camera</label
+			><br />
+			<label
+				><input
+					type="radio"
+					name="webrtc"
+					value="camera+microphone"
+				/>camera+microphone = stream from browser</label
+			><br />
+			<label
+				><input
+					type="radio"
+					name="webrtc"
+					value="display+speaker"
+				/>display+speaker = broadcast software</label
+			><br />
 
-    <br>
-    <li><a id="local" href="webrtc.html?src=">webrtc.html</a> local WebRTC viewer</li>
+			<br />
+			<li>
+				<a id="local" href="webrtc.html?src=">webrtc.html</a> local
+				WebRTC viewer
+			</li>
 
-    <li>
-        <a id="shareadd" href="#">share link</a>
-        <a id="shareget" href="#">copy link</a>
-        <a id="sharedel" href="#">delete</a>
-        external WebRTC viewer
-    </li>
-</div>
-<script>
-    function webrtcLinksUpdate() {
-        const media = document.querySelector('input[name="webrtc"]:checked').value
+			<li>
+				<a id="shareadd" href="#">share link</a>
+				<a id="shareget" href="#">copy link</a>
+				<a id="sharedel" href="#">delete</a>
+				external WebRTC viewer
+			</li>
+		</div>
+		<script>
+			function webrtcLinksUpdate() {
+				const media = document.querySelector(
+					'input[name="webrtc"]:checked'
+				).value;
 
-        const direction = media.indexOf('video') >= 0 || media === 'audio' ? 'src' : 'dst'
-        document.getElementById('local').href = `webrtc.html?${direction}=${src}&media=${media}`
+				const direction =
+					media.indexOf("video") >= 0 || media === "audio"
+						? "src"
+						: "dst";
+				document.getElementById(
+					"local"
+				).href = `webrtc.html?${direction}=${src}&media=${media}`;
 
-        const share = document.getElementById('shareget')
-        share.href = `https://alexxit.github.io/go2rtc/#${share.dataset.auth}&media=${media}`
-    }
+				const share = document.getElementById("shareget");
+				share.href = `https://alexxit.github.io/go2rtc/#${share.dataset.auth}&media=${media}`;
+			}
 
-    function share(method) {
-        const url = new URL('api/webtorrent', location.href)
-        url.searchParams.set('src', src)
-        return fetch(url, {method: method, cache: 'no-cache'})
-    }
+			function share(method) {
+				const url = new URL("api/webtorrent", location.href);
+				url.searchParams.set("src", src);
+				return fetch(url, { method: method, cache: "no-cache" });
+			}
 
-    function onshareadd(r) {
-        document.getElementById('shareget').dataset['auth'] = `share=${r.share}&pwd=${r.pwd}`
+			function onshareadd(r) {
+				document.getElementById("shareget").dataset[
+					"auth"
+				] = `share=${r.share}&pwd=${r.pwd}`;
 
-        document.getElementById('shareadd').style.display = 'none'
-        document.getElementById('shareget').style.display = ''
-        document.getElementById('sharedel').style.display = ''
+				document.getElementById("shareadd").style.display = "none";
+				document.getElementById("shareget").style.display = "";
+				document.getElementById("sharedel").style.display = "";
 
-        webrtcLinksUpdate()
-    }
+				webrtcLinksUpdate();
+			}
 
-    function onsharedel() {
-        document.getElementById('shareadd').style.display = ''
-        document.getElementById('shareget').style.display = 'none'
-        document.getElementById('sharedel').style.display = 'none'
-    }
+			function onsharedel() {
+				document.getElementById("shareadd").style.display = "";
+				document.getElementById("shareget").style.display = "none";
+				document.getElementById("sharedel").style.display = "none";
+			}
 
-    document.getElementById('shareadd').addEventListener('click', ev => {
-        ev.preventDefault()
-        share('POST').then(r => r.json()).then(r => onshareadd(r))
-    })
+			document
+				.getElementById("shareadd")
+				.addEventListener("click", (ev) => {
+					ev.preventDefault();
+					share("POST")
+						.then((r) => r.json())
+						.then((r) => onshareadd(r));
+				});
 
-    document.getElementById('shareget').addEventListener('click', ev => {
-        ev.preventDefault()
-        navigator.clipboard.writeText(ev.target.href)
-    })
+			document
+				.getElementById("shareget")
+				.addEventListener("click", (ev) => {
+					ev.preventDefault();
+					navigator.clipboard.writeText(ev.target.href);
+				});
 
-    document.getElementById('sharedel').addEventListener('click', ev => {
-        ev.preventDefault()
-        share('DELETE').then(r => onsharedel())
-    })
+			document
+				.getElementById("sharedel")
+				.addEventListener("click", (ev) => {
+					ev.preventDefault();
+					share("DELETE").then((r) => onsharedel());
+				});
 
-    document.getElementById('webrtc').addEventListener('click', ev => {
-        if (ev.target.tagName === 'INPUT') webrtcLinksUpdate()
-    })
+			document
+				.getElementById("webrtc")
+				.addEventListener("click", (ev) => {
+					if (ev.target.tagName === "INPUT") webrtcLinksUpdate();
+				});
 
-    share('GET').then(r => {
-        if (r.ok) r.json().then(r => onshareadd(r))
-        else onsharedel()
-    })
+			share("GET").then((r) => {
+				if (r.ok) r.json().then((r) => onshareadd(r));
+				else onsharedel();
+			});
 
-    webrtcLinksUpdate()
-</script>
-
-</body>
+			webrtcLinksUpdate();
+		</script>
+	</body>
 </html>
