Replace MP4 stream mode to HLS mode

--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
     <button>stream</button>
     <label><input type="checkbox" name="webrtc" checked>webrtc</label>
     <label><input type="checkbox" name="mse" checked>mse</label>
-    <label><input type="checkbox" name="mp4" checked>mp4</label>
+    <label><input type="checkbox" name="hls" checked>hls</label>
     <label><input type="checkbox" name="mjpeg" checked>mjpeg</label>
 </div>
 <table>
