Fix WebUI background color for dark mode browser

--- a/www/editor.html
+++ b/www/editor.html
@@ -8,6 +8,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: white;
         }
 
         body {
