--- a/www/links.html
+++ b/www/links.html
@@ -7,6 +7,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: white;
         }
 
         body {
