feat(api): add system stats (CPU and RAM usage) to API response
- Implement GetCPUUsage and GetRAMUsage functions in core package for fetching CPU and memory usage.
- Update apiHandler to include CPU and memory usage in the API response under "stats".
- Ensure thread safety in apiHandler by properly using defer for mutex unlock.
- Extend frontend to display fetched CPU and RAM usage statistics.
- Add tests for new core functionality ensuring correct operation of system resource usage fetching.

--- a/www/index.html
+++ b/www/index.html
@@ -141,14 +141,17 @@
                 tbody.appendChild(tr);
             }
         });
+
+        const url2 = new URL('api', location.href);
+        fetch(url2, {cache: 'no-cache'}).then(r => r.json()).then(data => {
+            const info = document.querySelector('.info');
+            info.innerText = `Version: ${data.version}, Config: ${data.config_path}\nCPU: ${parseFloat(data.stats.cpu).toFixed(2)}%, RAM: ${parseFloat(data.stats.mem.usedPercent).toFixed(2)}%`;
+        });
     }
 
-    const url = new URL('api', location.href);
-    fetch(url, {cache: 'no-cache'}).then(r => r.json()).then(data => {
-        const info = document.querySelector('.info');
-        info.innerText = `Version: ${data.version}, Config: ${data.config_path}`;
-    });
-
+    // Auto-reload every 5 seconds
+    setInterval(reload, 5000);
+    
     reload();
 </script>
 </body>
