Fix code style for HTML/JS files

--- a/www/log.html
+++ b/www/log.html
@@ -82,8 +82,8 @@
             .replace(/\n/g, '<br>');
     }
 
-    let reverseBtn = document.getElementById('reverse');
-    let update = document.getElementById('update');
+    const reverseBtn = document.getElementById('reverse');
+    const update = document.getElementById('update');
 
     let reverseOrder = false;
     let autoUpdateEnabled = true;
