--- a/www/add.html
+++ b/www/add.html
@@ -4,6 +4,14 @@
     <title>Add Stream</title>
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://alexxit.github.io/go2rtc/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://alexxit.github.io/go2rtc/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://alexxit.github.io/go2rtc/icons/favicon-16x16.png">
+    <link rel="manifest" href="https://alexxit.github.io/go2rtc/icons/site.webmanifest">
+    <link rel="mask-icon" href="https://alexxit.github.io/go2rtc/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="https://alexxit.github.io/go2rtc/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="https://alexxit.github.io/go2rtc/icons/browserconfig.xml">
     <style>
         body {
             margin: 0;
